--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-six==1.16.0
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
+certifi==2023.5.7
+charset-normalizer==3.2.0
+Django==4.2.3
+django-environ==0.10.0
+django-rest-framework==0.1.0
+djangorestframework==3.14.0
+idna==3.4
+pytz==2023.3
+requests==2.31.0
+sqlparse==0.4.4
+typing_extensions==4.7.1
+urllib3==2.0.3
